--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,21 +1,21 @@
 # =====================================================
 #   Meta-data for the project
 # =====================================================
-sonar.projectName=setup_python_project
-sonar.projectKey=LucaCappelletti94_setup_python_project
+sonar.projectName=setup_python_package
+sonar.projectKey=LucaCappelletti94_setup_python_package
 sonar.projectVersion=1.0.0
 sonar.organization=lucacappelletti94-github
 sonar.host.url=https://sonarcloud.io
-sonar.login=setup_python_project
+sonar.login=setup_python_package
 
-sonar.links.homepage=https://github.com/LucaCappelletti94/setup_python_project
-sonar.links.ci=https://travis-ci.org/LucaCappelletti94/setup_python_project
-sonar.links.scm=https://github.com/LucaCappelletti94/setup_python_project
-sonar.links.issue=https://github.com/LucaCappelletti94/setup_python_project/issues
+sonar.links.homepage=https://github.com/LucaCappelletti94/setup_python_package
+sonar.links.ci=https://travis-ci.org/LucaCappelletti94/setup_python_package
+sonar.links.scm=https://github.com/LucaCappelletti94/setup_python_package
+sonar.links.issue=https://github.com/LucaCappelletti94/setup_python_package/issues
 
 sonar.language=py
 
-sonar.sources=./setup_python_project
+sonar.sources=./setup_python_package
 sonar.tests=./tests
 
 sonar.exclusions=**/__pycache__/*,*/__pycache__/*
