--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ python:
 - '3.6'
 before_install:
 - pip install --upgrade pytest
+- pip install validate_version_code
 install:
 - pip install .[test]
 before_script:
