Started library refactoring

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "/usr/local/anaconda3/bin/python",
+    "python.pythonPath": "C:\\Users\\cappe\\AppData\\Local\\Continuum\\anaconda3\\python.exe",
     "restructuredtext.confPath": ""
 }
