--- a/setup_python_package/utils/config.json
+++ b/setup_python_package/utils/config.json
@@ -1,6 +1,6 @@
 {
     "tests_directory":"tests",
-    "test_dependencies":[
+    "tests_dependencies":[
         "pytest",
         "pytest-cov",
         "coveralls",
