[SPP] Created a backup.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,21 @@
 .vscode/
-.DS_Store
-*/__pycache__/*
-**/__pycache__/*
-.notipy.json
+
 __pycache__
+
+coverage.xml
+
+.coverage*
+
+.notipy.json
+
+.DS_Store
+
+**/__pycache__/*
+
+.single_run
+
+*/__pycache__/*
+
+*.egg-info
+
 .userinput.json
