--- a/setup_python_package/utils/config.json
+++ b/setup_python_package/utils/config.json
@@ -6,5 +6,6 @@
         "coveralls",
         "validate_version_code",
         "codacy-coverage"
-    ]
+    ],
+    "badges":".spp_cache/badges.json"
 }
